--- a/regress/usr.bin/Makefile
+++ b/regress/usr.bin/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.49 2023/09/21 21:08:48 bluhm Exp $
+#	$OpenBSD: Makefile,v 1.50 2023/09/21 21:22:43 bluhm Exp $
 
 SUBDIR+= apply
 SUBDIR+= basename bc
@@ -7,19 +7,17 @@ SUBDIR+= dc diff diff3 dirname doas
 SUBDIR+= file fmt fold
 SUBDIR+= grep gzip
 SUBDIR+= join jot
-SUBDIR+= lastcomm
-SUBDIR+= m4 mail mandoc
+SUBDIR+= lastcomm libtool
+SUBDIR+= m4 mail make mandoc
 SUBDIR+= nc
 SUBDIR+= openssl
-SUBDIR+= rev rsync
+SUBDIR+= patch pkg-config
+SUBDIR+= rcs rev rsync
 SUBDIR+= sdiff sed seq signify snmp sort
+SUBDIR+= ssh
 SUBDIR+= tsort
 SUBDIR+= ul
 SUBDIR+= wc
 SUBDIR+= xargs
-
-.if defined(REGRESS_FULL) || make(clean) || make(cleandir) || make(obj)
-SUBDIR+= libtool make patch pkg-config rcs ssh
-.endif
 
 .include <bsd.subdir.mk>
