--- a/lib/libcrypto/man/Makefile
+++ b/lib/libcrypto/man/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.269 2023/09/25 01:14:34 tb Exp $
+# $OpenBSD: Makefile,v 1.270 2023/09/25 11:59:10 tb Exp $
 
 .include <bsd.own.mk>
 
@@ -6,6 +6,7 @@ MAN=	\
 	ACCESS_DESCRIPTION_new.3 \
 	AES_encrypt.3 \
 	ASIdentifiers_new.3 \
+	ASRange_new.3 \
 	ASN1_BIT_STRING_set.3 \
 	ASN1_INTEGER_get.3 \
 	ASN1_NULL_new.3 \
